--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,17 @@
 cmake_minimum_required(VERSION 3.20)
-SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-PROJECT(SiSc CXX)
+PROJECT(SiSc)
 
-ADD_SUBDIRECTORY(src)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+include(FetchContent)
+
 ADD_EXECUTABLE(try src/try.cpp)
 
-option(ENABLE_UNIT_TESTS OFF)
-IF (ENABLE_UNIT_TESTS)
-  find_package(GTest CONFIG REQUIRED)
-  ADD_EXECUTABLE(try.test src/try.test.cpp)
-ENDIF()
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+  )
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
