--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,7 @@ ADD_SUBDIRECTORY(src)
 
 FetchContent_Declare(
   googletest
-  # currently v1.14
-  URL https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
   )
 
 # For Windows: Prevent overriding the parent project's compiler/linker settings
