--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 add_executable(main src/main.cpp)
-target_link_libraries(main PUBLIC Utilities)
+target_link_libraries(main PRIVATE libutilities)
