add abseil to have a library for working on strings
Noticing that C++ is missing some common functions such as string split,
or searching for containing strings the [abseil](https://abseil.io/)
library is added to the project in order to use theire functionality.

Documentation especially for the strings library can be seen
[here](https://abseil.io/docs/cpp/guides/strings#strings-library)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,21 @@
 enable_testing()
 
-add_library(libutilities utilities.cpp utilities.hpp)
-
-add_executable(
-        utilities.test
-        utilities.test.cpp
+add_library(libutilities
+  utilities.cpp
+  utilities.hpp
 )
-target_link_libraries(
-        utilities.test
-        libutilities
-        GTest::gtest_main
+
+target_link_libraries(libutilities
+  absl::strings
+)
+
+add_executable(utilities.test
+  utilities.test.cpp
+)
+
+target_link_libraries(utilities.test
+  libutilities
+  GTest::gtest_main
 )
 
 include(GoogleTest)
