--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -3,7 +3,7 @@
 name: CMake on a single platform
 
 on:
-  push:classic
+  push:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
