Solved the issue for the cases given in the first idea file (updated). Please review the name of the function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,10 @@ add_library(libutilities
 target_link_libraries(libutilities
   absl::strings
 )
+target_link_libraries(libutilities
+  absl::algorithm
+)
+
 
 add_executable(utilities.test
   utilities.test.cpp
