add SimpleConfigFile and ConfigFile
* add CallSignature
* add SimpleConfigFile
* add ConfigFile

The ConfigFile, deals as a base class which defined which members we would have.
SimpleConfig file is a concrete implementation containing currently one possible call signature and minimal validation of the input (if active is in call_string)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,23 +1,33 @@
 enable_testing()
 
 add_library(libutilities
-  utilities.cpp
-  utilities.hpp
+        utilities.cpp
+        utilities.hpp
+        ConfigFile.hpp
+        SimpleConfigFile.hpp
 )
 
 target_link_libraries(libutilities
-  absl::strings
-  absl::algorithm
+        absl::strings
+        absl::algorithm
 )
 
 
 add_executable(utilities.test
-  utilities.test.cpp
+        utilities.test.cpp
 )
 
 target_link_libraries(utilities.test
-  libutilities
-  GTest::gtest_main
+        libutilities
+        GTest::gtest_main
+)
+
+add_executable(ConfigFile.test
+        SimpleConfigFile.test.cpp)
+
+target_link_libraries(ConfigFile.test
+        libutilities
+        GTest::gtest_main
 )
 
 include(GoogleTest)
