add yaml reader to SimpleConfigFile
Currently creation over overloaded constructor, which should give us hopefully the opportunity to work with this class quite flexible.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(libutilities
 target_link_libraries(libutilities
         absl::strings
         absl::algorithm
+        yaml-cpp::yaml-cpp
 )
 
 add_executable(utilities.test
