--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,8 @@ enable_testing()
 include(GoogleTest)
 
 add_library(libutilities
-        utilities.cpp
-        utilities.hpp
+        Utilities.cpp
+        Utilities.hpp
         ConfigFile.hpp
         SimpleConfigFile.hpp
 )
@@ -14,15 +14,15 @@ target_link_libraries(libutilities
         yaml-cpp::yaml-cpp
 )
 
-add_executable(utilities.test
-  utilities.test.cpp
+add_executable(Utilities.test
+        Utilities.test.cpp
 )
 
-target_link_libraries(utilities.test
+target_link_libraries(Utilities.test
         libutilities
         GTest::gtest_main
 )
-gtest_discover_tests(utilities.test)
+gtest_discover_tests(Utilities.test)
 
 add_executable(SimpleConfigFile.test
         SimpleConfigFile.test.cpp)
