wip working add more implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(libutilities
         UtilitiesMock.hpp
         CppUtilities.hpp
         ConfigFile.hpp
+        ConfigFileMock.hpp
         SimpleConfigFile.hpp
         OutputParser.hpp
         CppOutputParser.hpp
