add DriverFactory and UtilitiesFactory
* based on key in ConfigFile and Utilities it gives a smart pointer to the corresponding class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(libutilities
         CppOutputParser.hpp
         Driver.hpp
         GradientDriver.hpp
+        DriverFactory.hpp
+        UtilitiesFactory.hpp
 )
 
 target_link_libraries(libutilities
