--- a/tests/integration/cpp_gradient_single_active_variable.yml
+++ b/tests/integration/cpp_gradient_single_active_variable.yml
@@ -2,5 +2,6 @@ language: cpp
 functions:
   call_signature: void f(double &x, double p)
   active_variable: x
+  output: y
   mode: tangent
   driver_type: gradient
