--- a/tests/yaml-reader/cpp_single_active_variable.yml
+++ b/tests/yaml-reader/cpp_single_active_variable.yml
@@ -2,5 +2,6 @@ language: cpp
 functions:
   call_signature: void f(double &x)
   active_variable: x
+  output: y
   mode: tangent
   driver_type: gradient
