Jacobian Driver Integration tests implemented, work succesfully for 1 input vector 1 output vector case.

--- a/tests/integration/CMakeLists.txt
+++ b/tests/integration/CMakeLists.txt
@@ -12,3 +12,15 @@ add_test(NAME GradientDriver.ExternalYAMLFile_WhenTwoActiveVariables
         "${CMAKE_CURRENT_SOURCE_DIR}/cpp_gradient_two_active_variable.yml"
         "${CMAKE_CURRENT_SOURCE_DIR}/cpp_gradient_two_active_variable.txt"
 )
+
+add_test(NAME JacobianDriver.ExternalYAMLFile_TangentMode1ActiveVector1OutputVector
+        COMMAND driver
+        "${CMAKE_CURRENT_SOURCE_DIR}/cpp_jacobian_tangent_1_act_vec_1_out_vector.yml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/cpp_jacobian_tangent_1_act_vec_1_out_vector.txt"
+)
+
+add_test(NAME JacobianDriver.ExternalYAMLFile_AjointMode1ActiveVector1OutputVector
+        COMMAND driver
+        "${CMAKE_CURRENT_SOURCE_DIR}/cpp_jacobian_adjoint_1_act_vec_1_out_vector.yml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/cpp_jacobian_adjoint_1_act_vec_1_out_vector.txt"
+)
